--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Changes in 2.27.3:
+------------------
+* Various code updates (Thomas Hindoe Paaboel Andersen)
+* Updated translations:
+  ar      (Khaled Hosny)
+  fi      (Ilkka Tuohela)
+  fr      (Claude Paroz)
+  he      (Yaron Shahrabani)
+  sv      (Daniel Nylander)
+  ta      (drtvasudevan)
+  uk      (Maxim V. Dziumanenko)
+  vi      (Hai-Nam Nguyen)
+
 Changes in 2.27.2:
 ------------------
 * Require Mallard-enabled gnome-doc-utils
