--- a/po/br.po
+++ b/po/br.po
@@ -2,25 +2,27 @@
 # Copyright (C) 2004-2005 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gnome-menu package.
 # Jérémy Ar Floc'h <jeremy.lefloch@gmail.com>, 2006.
-# 
-# 
+#
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp 2.14\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-16 17:28+0100\n"
-"PO-Revision-Date: 2006-03-16 14:49+0100\n"
-"Last-Translator: Jérémy Le Floc'h <jeremy.lefloch@gmail.com>\n"
+"PO-Revision-Date: 2009-08-21 10:18+0100\n"
+"Last-Translator: Denis\n"
 "Language-Team: Britton\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../data/info.xml.in.h:1 ../src/yelp-toc-pager.c:1239
+#: ../data/info.xml.in.h:1
+#: ../src/yelp-toc-pager.c:1239
 msgid "GNU Info Pages"
 msgstr "Pajennoù GNU Info"
 
-#: ../data/man.xml.in.h:1 ../data/toc.xml.in.h:4
+#: ../data/man.xml.in.h:1
+#: ../data/toc.xml.in.h:4
 msgid "Applications"
 msgstr "Arloadoù"
 
@@ -36,13 +38,14 @@ msgstr "Diorren"
 msgid "FORTRAN Functions"
 msgstr "Arc'hwelioù"
 
-#: ../data/man.xml.in.h:5 ../data/toc.xml.in.h:7
+#: ../data/man.xml.in.h:5
+#: ../data/toc.xml.in.h:7
 msgid "Games"
 msgstr "C'hoarioù"
 
 #: ../data/man.xml.in.h:6
 msgid "Hardware Devices"
-msgstr ""
+msgstr "Trobarzhelloù periant"
 
 #: ../data/man.xml.in.h:7
 msgid "Kernel Routines"
@@ -52,7 +55,8 @@ msgstr ""
 msgid "Library Functions"
 msgstr "Arc'hwelioù levraoueg"
 
-#: ../data/man.xml.in.h:9 ../src/yelp-toc-pager.c:1233
+#: ../data/man.xml.in.h:9
+#: ../src/yelp-toc-pager.c:1233
 msgid "Manual Pages"
 msgstr "Pajennoù dornlevr"
 
@@ -110,7 +114,7 @@ msgstr "Kefluniadur X11"
 
 #: ../data/man.xml.in.h:23
 msgid "X11 Devices"
-msgstr "Trobarzhelloù"
+msgstr "Trobarzhelloù X11"
 
 #: ../data/man.xml.in.h:24
 msgid "X11 Functions"
@@ -138,7 +142,7 @@ msgstr "Mererezh"
 
 #: ../data/toc.xml.in.h:5
 msgid "Desktop"
-msgstr "Gorretaol"
+msgstr "Burev"
 
 #: ../data/toc.xml.in.h:6
 msgid "Education Applications"
@@ -148,9 +152,10 @@ msgstr "Arloadoù deskadurezh"
 msgid "Graphics"
 msgstr "Grafikoù"
 
-#: ../data/toc.xml.in.h:9 ../src/yelp-bookmarks.c:410
+#: ../data/toc.xml.in.h:9
+#: ../src/yelp-bookmarks.c:410
 msgid "Help Topics"
-msgstr "Sujedoù skoazell"
+msgstr "Danvezioù ar skoazell"
 
 #: ../data/toc.xml.in.h:10
 msgid "Internet"
@@ -180,7 +185,8 @@ msgstr "Diellerezh all"
 msgid "Panel Applets"
 msgstr ""
 
-#: ../data/toc.xml.in.h:17 ../data/ui/yelp.glade.h:8
+#: ../data/toc.xml.in.h:17
+#: ../data/ui/yelp.glade.h:8
 msgid "Preferences"
 msgstr "Dibaboù gwellañ"
 
@@ -206,7 +212,7 @@ msgstr "<b>Haezadusted</b>"
 
 #: ../data/ui/yelp.glade.h:2
 msgid "<b>Fonts</b>"
-msgstr "<b>Nodrezh</b>"
+msgstr "<b>Nodrezhoù</b>"
 
 #: ../data/ui/yelp.glade.h:3
 msgid "Add Bookmark"
@@ -230,7 +236,7 @@ msgstr "Digeriñ ul lec'hiad"
 
 #: ../data/ui/yelp.glade.h:9
 msgid "Re_name"
-msgstr "adenvel"
+msgstr "_Adenvel"
 
 #: ../data/ui/yelp.glade.h:10
 msgid "_Bookmarks:"
@@ -250,7 +256,7 @@ msgstr ""
 
 #: ../data/ui/yelp.glade.h:14
 msgid "_Location:"
-msgstr "_Lec'hiad :"
+msgstr "_Lec'hiadur :"
 
 #: ../data/ui/yelp.glade.h:15
 msgid "_Next"
@@ -266,7 +272,7 @@ msgstr "_Titl :"
 
 #: ../data/ui/yelp.glade.h:18
 msgid "_Use system fonts"
-msgstr "_Implijañ nodrezhoù reizhiad"
+msgstr "_Arverañ nodrezhoù ar reizhiad"
 
 #: ../data/ui/yelp.glade.h:19
 msgid "_Variable width:"
@@ -282,7 +288,7 @@ msgstr ""
 
 #: ../data/yelp.schemas.in.h:2
 msgid "Font for text"
-msgstr "Nedrezh evit testenn"
+msgstr "Nodrezh evit an destenn"
 
 #: ../data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
@@ -302,19 +308,20 @@ msgstr ""
 
 #: ../data/yelp.schemas.in.h:7
 msgid "Use system fonts"
-msgstr "Impliañ nodrezhoù reizhiad"
+msgstr "Arverañ nodrezhoù ar reizhiad"
 
 #: ../data/yelp.schemas.in.h:8
 msgid "Use the default fonts set for the system."
 msgstr ""
 
-#: ../src/GNOME_Yelp.server.in.h:1 ../src/yelp-window.c:2661
+#: ../src/GNOME_Yelp.server.in.h:1
+#: ../src/yelp-window.c:2661
 msgid "Yelp"
 msgstr "Yelp"
 
 #: ../src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr ""
+msgstr "Aozerez Yelp"
 
 #: ../src/yelp-bookmarks.c:155
 msgid "Open Bookmark in New Window"
@@ -342,14 +349,14 @@ msgstr ""
 msgid "Document Sections"
 msgstr ""
 
-#: ../src/yelp-db-pager.c:245 ../src/yelp-db-print-pager.c:197
+#: ../src/yelp-db-pager.c:245
+#: ../src/yelp-db-print-pager.c:197
 #, c-format
-msgid ""
-"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
-"not well-formed XML."
+msgid "The file ‘%s’ could not be parsed. Either the file does not exist, or it is not well-formed XML."
 msgstr ""
 
-#: ../src/yelp-error.c:42 ../src/yelp-error.c:58
+#: ../src/yelp-error.c:42
+#: ../src/yelp-error.c:58
 msgid "An unknown error occured"
 msgstr ""
 
@@ -367,7 +374,7 @@ msgstr ""
 
 #: ../src/yelp-error.c:52
 msgid "Unsupported Format"
-msgstr ""
+msgstr "Mentrezh anskoret"
 
 #: ../src/yelp-error.c:54
 msgid "Could not read document"
@@ -383,16 +390,12 @@ msgstr ""
 
 #: ../src/yelp-info-pager.c:190
 #, c-format
-msgid ""
-"The file  ‘%s’ could not be parsed. Either the file does not exist, or it is "
-"not a well-formed info page."
+msgid "The file  ‘%s’ could not be parsed. Either the file does not exist, or it is not a well-formed info page."
 msgstr ""
 
 #: ../src/yelp-io-channel.c:101
 #, c-format
-msgid ""
-"The file ‘%s’ could not be read and decoded. The file may be compressed in "
-"an unsupported format."
+msgid "The file ‘%s’ could not be read and decoded. The file may be compressed in an unsupported format."
 msgstr ""
 
 #: ../src/yelp-main.c:99
@@ -408,20 +411,19 @@ msgstr ""
 msgid "Could not open new window."
 msgstr ""
 
-#: ../src/yelp-main.c:400 ../yelp.desktop.in.in.h:2
+#: ../src/yelp-main.c:400
+#: ../yelp.desktop.in.in.h:2
 msgid "Help"
 msgstr "Skoazell"
 
 #: ../src/yelp-man-pager.c:185
 #, c-format
-msgid ""
-"The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
-"formatted incorrectly."
+msgid "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is formatted incorrectly."
 msgstr ""
 
 #: ../src/yelp-pager.c:122
 msgid "Document Information"
-msgstr ""
+msgstr "Stlennoù an teul"
 
 #: ../src/yelp-pager.c:123
 msgid "The YelpDocInfo struct of the document"
@@ -445,9 +447,7 @@ msgstr ""
 
 #: ../src/yelp-print.c:359
 #, c-format
-msgid ""
-"You were trying to print to a printer using the \"%s\" driver.  This program "
-"requires a PostScript printer driver."
+msgid "You were trying to print to a printer using the \"%s\" driver.  This program requires a PostScript printer driver."
 msgstr ""
 
 #: ../src/yelp-print.c:402
@@ -460,11 +460,11 @@ msgstr ""
 
 #: ../src/yelp-print.c:466
 msgid "Printing"
-msgstr ""
+msgstr "Moullañ"
 
 #: ../src/yelp-print.c:493
 msgid "<b>Printing</b>"
-msgstr ""
+msgstr "<b>Moullañ</b>"
 
 #: ../src/yelp-print.c:495
 msgid "Waiting to print"
@@ -488,26 +488,28 @@ msgstr ""
 
 #: ../src/yelp-search-pager.c:676
 #, c-format
-msgid ""
-"Your search could not be processed. The file ‘%s’ is either missing or is "
-"not a valid XSLT stylesheet."
+msgid "Your search could not be processed. The file ‘%s’ is either missing or is not a valid XSLT stylesheet."
 msgstr ""
 
-#: ../src/yelp-search-pager.c:778 ../src/yelp-toc-pager.c:1506
+#: ../src/yelp-search-pager.c:778
+#: ../src/yelp-toc-pager.c:1506
 #: ../src/yelp-xslt-pager.c:368
 msgid "No href attribute found on yelp:document"
 msgstr ""
 
-#: ../src/yelp-search-pager.c:792 ../src/yelp-toc-pager.c:1520
+#: ../src/yelp-search-pager.c:792
+#: ../src/yelp-toc-pager.c:1520
 #: ../src/yelp-xslt-pager.c:384
 msgid "Out of memory"
 msgstr ""
 
-#: ../src/yelp-search-pager.c:833 ../src/yelp-toc-pager.c:1570
+#: ../src/yelp-search-pager.c:833
+#: ../src/yelp-toc-pager.c:1570
 msgid "Help Contents"
-msgstr ""
+msgstr "Endalc'hadoù ar skoazell"
 
-#: ../src/yelp-search-pager.c:1119 ../src/yelp-toc-pager.c:499
+#: ../src/yelp-search-pager.c:1119
+#: ../src/yelp-toc-pager.c:499
 #, c-format
 msgid "Could not load the OMF file '%s'."
 msgstr ""
@@ -553,9 +555,7 @@ msgstr ""
 
 #: ../src/yelp-toc-pager.c:1206
 #, c-format
-msgid ""
-"The table of contents could not be loaded. The file ‘%s’ is either missing "
-"or is not well-formed XML."
+msgid "The table of contents could not be loaded. The file ‘%s’ is either missing or is not well-formed XML."
 msgstr ""
 
 #: ../src/yelp-toc-pager.c:1228
@@ -564,9 +564,7 @@ msgstr ""
 
 #: ../src/yelp-toc-pager.c:1342
 #, c-format
-msgid ""
-"The table of contents could not be processed. The file ‘%s’ is either "
-"missing or is not a valid XSLT stylesheet."
+msgid "The table of contents could not be processed. The file ‘%s’ is either missing or is not a valid XSLT stylesheet."
 msgstr ""
 
 #: ../src/yelp-window.c:311
@@ -595,11 +593,11 @@ msgstr "_Prenestr nevez"
 
 #: ../src/yelp-window.c:323
 msgid "Print This Document"
-msgstr ""
+msgstr "Moullañ an teul-mañ"
 
 #: ../src/yelp-window.c:328
 msgid "Print This Page"
-msgstr ""
+msgstr "Moullañ ar bajenn-mañ"
 
 #: ../src/yelp-window.c:333
 msgid "About This Document"
@@ -607,7 +605,7 @@ msgstr "Diwar-benn an teul-mañ"
 
 #: ../src/yelp-window.c:338
 msgid "Open _Location"
-msgstr "Digeriñ ul lec'hiad"
+msgstr "Digeriñ al lec'hiadur"
 
 #: ../src/yelp-window.c:343
 msgid "_Close Window"
@@ -615,7 +613,7 @@ msgstr "_Serriñ ar prenestr"
 
 #: ../src/yelp-window.c:349
 msgid "_Copy"
-msgstr "_Kopiañ"
+msgstr "_Eilañ"
 
 #: ../src/yelp-window.c:355
 msgid "_Select All"
@@ -623,7 +621,7 @@ msgstr "_Diuz pep tra"
 
 #: ../src/yelp-window.c:360
 msgid "_Find..."
-msgstr "_Klask..."
+msgstr "_Kavout..."
 
 #: ../src/yelp-window.c:365
 msgid "Find Pre_vious"
@@ -643,7 +641,7 @@ msgstr ""
 
 #: ../src/yelp-window.c:375
 msgid "_Preferences"
-msgstr "_Dibaboù gwellañ"
+msgstr "_Gwellvezioù"
 
 #: ../src/yelp-window.c:380
 msgid "_Reload"
@@ -667,7 +665,7 @@ msgstr ""
 
 #: ../src/yelp-window.c:402
 msgid "_Help Topics"
-msgstr ""
+msgstr "Danvezioù ar skoazell"
 
 #: ../src/yelp-window.c:404
 msgid "Go to the listing of help topics"
@@ -683,7 +681,7 @@ msgstr ""
 
 #: ../src/yelp-window.c:417
 msgid "_Contents"
-msgstr "_Endalc'had"
+msgstr "_Endalc'hadoù"
 
 #: ../src/yelp-window.c:423
 msgid "_Add Bookmark"
@@ -703,7 +701,7 @@ msgstr "Digeriñ an ere e-barzh ur prenestr nevez"
 
 #: ../src/yelp-window.c:444
 msgid "_Copy Link Address"
-msgstr "_Kopiañ lec'hiadur an ere"
+msgstr "_Eilañ lec'hiadur an ere"
 
 #: ../src/yelp-window.c:450
 msgid "_About"
@@ -711,39 +709,40 @@ msgstr "_A-zivout"
 
 #: ../src/yelp-window.c:455
 msgid "Copy _Email Address"
-msgstr "Kopiañ ar postel"
+msgstr "Eilañ ar postel"
 
 #: ../src/yelp-window.c:504
 msgid "Help Browser"
 msgstr ""
 
-#: ../src/yelp-window.c:768 ../src/yelp-window.c:924
+#: ../src/yelp-window.c:768
+#: ../src/yelp-window.c:924
 msgid "The Uniform Resource Identifier for the file is invalid."
 msgstr ""
 
-#: ../src/yelp-window.c:780 ../src/yelp-window.c:919
+#: ../src/yelp-window.c:780
+#: ../src/yelp-window.c:919
 #, c-format
-msgid ""
-"The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
-"actual file."
+msgid "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an actual file."
 msgstr ""
 
-#: ../src/yelp-window.c:866 ../src/yelp-window.c:1295
+#: ../src/yelp-window.c:866
+#: ../src/yelp-window.c:1295
 msgid "Man pages are not supported in this version."
 msgstr ""
 
-#: ../src/yelp-window.c:876 ../src/yelp-window.c:1286
+#: ../src/yelp-window.c:876
+#: ../src/yelp-window.c:1286
 msgid "GNU info pages are not supported in this version"
 msgstr ""
 
-#: ../src/yelp-window.c:894 ../src/yelp-window.c:1308
+#: ../src/yelp-window.c:894
+#: ../src/yelp-window.c:1308
 msgid "Search is not supported in this version."
 msgstr ""
 
 #: ../src/yelp-window.c:899
-msgid ""
-"SGML documents are no longer supported. Please ask the author of the "
-"document to convert to XML."
+msgid "SGML documents are no longer supported. Please ask the author of the document to convert to XML."
 msgstr ""
 
 #: ../src/yelp-window.c:1025
@@ -768,30 +767,25 @@ msgstr ""
 
 #: ../src/yelp-window.c:1321
 #, c-format
-msgid ""
-"A transformation context could not be created for the file ‘%s’. The format "
-"may not be supported."
+msgid "A transformation context could not be created for the file ‘%s’. The format may not be supported."
 msgstr ""
 
-#: ../src/yelp-window.c:1350 ../src/yelp-window.c:1764
+#: ../src/yelp-window.c:1350
+#: ../src/yelp-window.c:1764
 #: ../src/yelp-window.c:1840
 #, c-format
-msgid ""
-"The section ‘%s’ does not exist in this document. If you were directed to "
-"this section from a Help button in an application, please report this to the "
-"maintainers of that application."
+msgid "The section ‘%s’ does not exist in this document. If you were directed to this section from a Help button in an application, please report this to the maintainers of that application."
 msgstr ""
 
-#: ../src/yelp-window.c:1465 ../src/yelp-window.c:2230
+#: ../src/yelp-window.c:1465
+#: ../src/yelp-window.c:2230
 #, c-format
-msgid ""
-"The file ‘%s’ could not be read.  This file might be missing, or you might "
-"not have permissions to read it."
+msgid "The file ‘%s’ could not be read.  This file might be missing, or you might not have permissions to read it."
 msgstr ""
 
 #: ../src/yelp-window.c:1516
 msgid "Loading..."
-msgstr "O kargañ"
+msgstr "O kargañ..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will show up in the "about" box
@@ -805,18 +799,16 @@ msgstr ""
 
 #: ../src/yelp-xslt-pager.c:195
 #, c-format
-msgid ""
-"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
-"improperly formatted."
+msgid "The file ‘%s’ could not be parsed. Either the file does not exist, or it is improperly formatted."
 msgstr ""
 
-#: ../src/yelp-xslt-pager.c:216 ../src/yelp-xslt-pager.c:229
+#: ../src/yelp-xslt-pager.c:216
+#: ../src/yelp-xslt-pager.c:229
 #, c-format
-msgid ""
-"The document ‘%s’ could not be processed. The file ‘%s’ is either missing, "
-"or it is not a valid XSLT stylesheet."
+msgid "The document ‘%s’ could not be processed. The file ‘%s’ is either missing, or it is not a valid XSLT stylesheet."
 msgstr ""
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr ""
+
