--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,27 @@
+Changes in 2.27.4:
+------------------
+* Make ghelp URIs work for Mallard documents (Shaun McCance)
+* Replace libgnome by using EggSMClient (Thomas Hindoe Paaboel Andersen)
+* Updated translations:
+  ar    (Khaled Hosny)
+  bg    (Alexander Shopov)
+  br    (Denis Arnaud)
+  ca    (Gil Forcada)
+  de    (Christian Kirbach, Mario Blättermann)
+  es    (Jorge González)
+  et    (Ivar Smolin)
+  fi    (Tommi Vainikainen)
+  fr    (Claude Paroz)
+  ga    (Seán de Búrca)
+  gl    (Antón Méixome)
+  it    (Milo Casagrande)
+  ko    (Changwoo Ryu)
+  nb    (Kjartan Maraas)
+  pt_BR (André Gondim)
+  sv    (Daniel Nylander)
+  zh_HK (Chao-Hsiung Liao)
+  zh_TW (Chao-Hsiung Liao)
+
 Changes in 2.27.3:
 ------------------
 * Various code updates (Thomas Hindoe Paaboel Andersen)
