--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,28 @@
+Changes in 2.27.5:
+------------------
+* Fixed broken history navigation for Mallard documents (Shaun McCance)
+* Make sure link title roles are preserved in cache (Shaun McCance)
+* Fixed jumping to anchors in Mallard documents (Shaun McCance)
+* Updated translations:
+  bn          (Jamil Ahmed)
+  bn_IN       (Runa Bhattacharjee)
+  cs          (Petr Kovar)
+  eu          (Inaki Larranaga Murgoitio)
+  gu          (Sweta Kothari)
+  ml          (Ani)
+  mr          (Sandeep Shedmake)
+  nb          (Kjartan Maraas)
+  pa          (A S Alam)
+  pl          (Tomasz Dominikowski)
+  pt          (Duarte Loreto)
+  pt_BR       (Og B. Maciel)
+  sr          (Miloš Popović)
+  sr@latin    (Miloš Popović)
+  ta          (ifelix)
+  te          (krishnababu k)
+  tr          (Baris Cicek)
+  zh_CN       (Aron Xu)
+
 Changes in 2.27.4:
 ------------------
 * Make ghelp URIs work for Mallard documents (Shaun McCance)
