--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+Changes in 2.28.0:
+------------------
+* Updated translations:
+  as          (Amitakhya Phukan)
+  ca@valencia (Carles Ferrando)
+  da          (Ask H. Larsen)
+  el          (Kostas Papadimas)
+  en_GB       (Philip Withnall)
+  hi          (Rajesh Ranjan)
+  hu          (Gabor Kelemen)
+  ja          (Takayuki KUSANO)
+  kn          (Shankar Prasad)
+  nb          (Kjartan Maraas)
+  or          (Manoj Kumar Giri)
+  pt_BR       (Fábio Nogueira)
+  ro          (Lucian Adrian Grijincu)
+  sl          (Matej Urbančič)
+  te          (krishnababu k)
+  uk          (Maxim V. Dziumanenko)
+
 Changes in 2.27.5:
 ------------------
 * Fixed broken history navigation for Mallard documents (Shaun McCance)
