--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changes in 2.29.1:
+------------------
+* Fixed admonition graphics
+* Upped gnome-doc-utils version for fancy new Mallard features
+* Use accessor functions instead direct access (Javier Jardón)
+* Updated translations:
+  ca    (Jordi Serratosa)
+  he    (Yaron Sharabani)
+
 Changes in 2.28.1:
 ------------------
 * Use g_timeout_add_seconds to reduce wakeups, bug #581260 (Javier Jardón)
