--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in 2.29.2:
+------------------
+* Adapted to changes in gnome-doc-utils XSLT
+
 Changes in 2.29.1:
 ------------------
 * Fixed admonition graphics
