--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in 2.29.3:
+------------------
+* Fixed issues with xulrunner 1.9.2
+
 Changes in 2.29.2:
 ------------------
 * Adapted to changes in gnome-doc-utils XSLT
