--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 2.29.4:
+------------------
+* Updated translations:
+  th    (Theppitak Karoonboonyanan)
+
 Changes in 2.29.3:
 ------------------
 * Fixed issues with xulrunner 1.9.2
