--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 2.29.5:
+------------------
+* Clean up GLib and GTK+ includes (Javier Jardón)
+* Updated translations:
+  gl    (Fran Diéguez)
+
 Changes in 2.29.4:
 ------------------
 * Updated translations:
