--- a/po/pl.po
+++ b/po/pl.po
@@ -7,14 +7,19 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-25 16:42+0200\n"
-"PO-Revision-Date: 2009-08-29 16:10+0100\n"
-"Last-Translator: Tomasz Dominikowski <dominikowski@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=yelp&component=general\n"
+"POT-Creation-Date: 2009-11-08 15:41+0000\n"
+"PO-Revision-Date: 2010-02-26 19:57+0100\n"
+"Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <gnomepl@aviary.pl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Polish\n"
+"X-Poedit-Country: Poland\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2);\n"
 "X-Poedit-Language: Polish\n"
 "X-Poedit-Country: Poland\n"
 
@@ -42,17 +47,15 @@ msgstr "Pliki konfiguracyjne"
 msgid "Curses Functions"
 msgstr "Funkcje Curses"
 
-#: ../data/man.xml.in.h:5
-#: ../data/toc.xml.in.h:35
+#: ../data/man.xml.in.h:5 ../data/toc.xml.in.h:35
 msgid "Development"
 msgstr "Programowanie"
 
 #: ../data/man.xml.in.h:6
 msgid "FORTRAN Functions"
-msgstr "Funkcje FORTRAN"
+msgstr "Funkcje języka Fortran"
 
-#: ../data/man.xml.in.h:7
-#: ../data/toc.xml.in.h:56
+#: ../data/man.xml.in.h:7 ../data/toc.xml.in.h:56
 msgid "Games"
 msgstr "Gry"
 
@@ -70,23 +73,23 @@ msgstr "Strony podręcznika"
 
 #: ../data/man.xml.in.h:11
 msgid "Network Audio Sound Functions"
-msgstr "Funkcje dźwięku sieciowego"
+msgstr "Funkcje NAS"
 
 #: ../data/man.xml.in.h:12
 msgid "OpenSSL Applications"
-msgstr "Programy OpenSSL"
+msgstr "Programy biblioteki OpenSSL"
 
 #: ../data/man.xml.in.h:13
 msgid "OpenSSL Configuration"
-msgstr "Konfiguracja OpenSSL"
+msgstr "Konfiguracja biblioteki OpenSSL"
 
 #: ../data/man.xml.in.h:14
 msgid "OpenSSL Functions"
-msgstr "Funkcje OpenSSL"
+msgstr "Funkcje biblioteki OpenSSL"
 
 #: ../data/man.xml.in.h:15
 msgid "OpenSSL Overviews"
-msgstr "Zestawienia OpenSSL"
+msgstr "Zestawienia biblioteki OpenSSL"
 
 #: ../data/man.xml.in.h:16
 msgid "Overviews"
@@ -94,23 +97,23 @@ msgstr "Zestawienia"
 
 #: ../data/man.xml.in.h:17
 msgid "POSIX Functions"
-msgstr "Funkcje POSIX"
+msgstr "Funkcje standardu POSIX"
 
 #: ../data/man.xml.in.h:18
 msgid "POSIX Headers"
-msgstr "Nagłówki POSIX"
+msgstr "Nagłówki standardu POSIX"
 
 #: ../data/man.xml.in.h:19
 msgid "Perl Functions"
-msgstr "Funkcje Perl"
+msgstr "Funkcje języka Perl"
 
 #: ../data/man.xml.in.h:20
 msgid "Qt Functions"
-msgstr "Funkcje Qt"
+msgstr "Funkcje biblioteki Qt"
 
 #: ../data/man.xml.in.h:21
 msgid "Readline Functions"
-msgstr "Funkcje Readline"
+msgstr "Funkcje biblioteki Readline"
 
 #: ../data/man.xml.in.h:22
 msgid "Section 0p"
@@ -292,8 +295,7 @@ msgstr "Grafika dwuwymiarowa"
 msgid "3D Graphics"
 msgstr "Grafika trójwymiarowa"
 
-#: ../data/toc.xml.in.h:3
-#: ../data/ui/yelp-preferences.ui.h:1
+#: ../data/toc.xml.in.h:3 ../data/ui/yelp-preferences.ui.h:1
 msgid "Accessibility"
 msgstr "Dostępność"
 
@@ -579,7 +581,9 @@ msgid "Kids Games"
 msgstr "Gry dla dzieci"
 
 #: ../data/toc.xml.in.h:77
-msgid "Learn more about making your system more accessible for a range of disabilities"
+msgid ""
+"Learn more about making your system more accessible for a range of "
+"disabilities"
 msgstr "Informacje o dostosowaniu systemu dla niepełnosprawności"
 
 #: ../data/toc.xml.in.h:78
@@ -683,9 +687,7 @@ msgstr "Odtwarzacze"
 msgid "Presentation Tools"
 msgstr "Narzędzia do prezentacji"
 
-#: ../data/toc.xml.in.h:104
-#: ../src/yelp-print.c:337
-#: ../src/yelp-print.c:364
+#: ../data/toc.xml.in.h:104 ../src/yelp-print.c:337 ../src/yelp-print.c:364
 msgid "Printing"
 msgstr "Drukowanie"
 
@@ -752,7 +754,8 @@ msgstr "Ustawienia"
 
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
-msgstr "Ustawienia które mogą być zmienione, aby środowisko było bardziej przyjazne"
+msgstr ""
+"Ustawienia które mogą być zmienione, aby środowisko było bardziej przyjazne"
 
 #: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
@@ -881,7 +884,7 @@ msgstr "_Zakładki:"
 
 #: ../data/ui/yelp-bookmarks-add.ui.h:1
 msgid "Add Bookmark"
-msgstr "Dodawanie zakładki"
+msgstr "Dodanie zakładki"
 
 #: ../data/ui/yelp-bookmarks-add.ui.h:2
 msgid "_Title:"
@@ -937,7 +940,8 @@ msgstr "Czcionka tekstu ze zmienną szerokością."
 
 #: ../data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
-msgstr "Użycie kursora kontrolowanego przez klawiaturę przy przeglądaniu stron."
+msgstr ""
+"Użycie kursora kontrolowanego przez klawiaturę przy przeglądaniu stron."
 
 #: ../data/yelp.schemas.in.h:6
 msgid "Use caret"
@@ -954,12 +958,12 @@ msgstr "Użycie domyślnych czcionek systemowych."
 #: ../src/eggdesktopfile.c:165
 #, c-format
 msgid "File is not a valid .desktop file"
-msgstr "Plik nie jest prawidłowym plikiem .desktop"
+msgstr "Nieprawidłowy plik .desktop"
 
 #: ../src/eggdesktopfile.c:188
 #, c-format
 msgid "Unrecognized desktop file Version '%s'"
-msgstr "Nierozpoznany plik .desktop w wersji \"%s\""
+msgstr "Nierozpoznana wersja pliku .desktop \"%s\""
 
 #: ../src/eggdesktopfile.c:958
 #, c-format
@@ -969,17 +973,18 @@ msgstr "Uruchamianie %s"
 #: ../src/eggdesktopfile.c:1100
 #, c-format
 msgid "Application does not accept documents on command line"
-msgstr "Program nie akceptuje dokumentów w wierszu poleceń"
+msgstr "Program nie przyjmuje dokumentów w wierszu poleceń"
 
 #: ../src/eggdesktopfile.c:1168
 #, c-format
 msgid "Unrecognized launch option: %d"
-msgstr "Nierozpoznana opcja startowa: %d"
+msgstr "Nierozpoznana opcja uruchamiania: %d"
 
 #: ../src/eggdesktopfile.c:1373
 #, c-format
 msgid "Can't pass document URIs to a 'Type=Link' desktop entry"
-msgstr "Nie można przekazać adresu URI dokumentu do wpisu .desktop \"Type=Link\""
+msgstr ""
+"Nie można przekazać adresu URI dokumentu do wpisu .desktop \"Type=Link\""
 
 #: ../src/eggdesktopfile.c:1392
 #, c-format
@@ -1044,86 +1049,70 @@ msgstr "Tematy pomocy"
 msgid "Document Sections"
 msgstr "Sekcje dokumentów"
 
-#: ../src/yelp-db-print.c:258
-#: ../src/yelp-db-print.c:350
-#: ../src/yelp-docbook.c:275
-#: ../src/yelp-docbook.c:367
-#: ../src/yelp-info.c:243
-#: ../src/yelp-info.c:338
-#: ../src/yelp-mallard.c:280
-#: ../src/yelp-man.c:292
-#: ../src/yelp-man.c:385
-#: ../src/yelp-toc.c:266
+#: ../src/yelp-db-print.c:258 ../src/yelp-db-print.c:350
+#: ../src/yelp-docbook.c:275 ../src/yelp-docbook.c:367 ../src/yelp-info.c:243
+#: ../src/yelp-info.c:338 ../src/yelp-mallard.c:280 ../src/yelp-mallard.c:380
+#: ../src/yelp-man.c:292 ../src/yelp-man.c:385 ../src/yelp-toc.c:266
 #: ../src/yelp-toc.c:365
 msgid "Page not found"
 msgstr "Strona nie została odnaleziona"
 
-#: ../src/yelp-db-print.c:259
-#: ../src/yelp-docbook.c:276
-#: ../src/yelp-info.c:244
-#: ../src/yelp-mallard.c:281
-#: ../src/yelp-man.c:293
+#: ../src/yelp-db-print.c:259 ../src/yelp-docbook.c:276 ../src/yelp-info.c:244
+#: ../src/yelp-mallard.c:281 ../src/yelp-mallard.c:381 ../src/yelp-man.c:293
 #, c-format
 msgid "The page %s was not found in the document %s."
 msgstr "Strona %s nie została odnaleziona w dokumencie %s."
 
-#: ../src/yelp-db-print.c:351
-#: ../src/yelp-docbook.c:368
-#: ../src/yelp-info.c:339
+#: ../src/yelp-db-print.c:351 ../src/yelp-docbook.c:368 ../src/yelp-info.c:339
 #: ../src/yelp-man.c:386
 #, c-format
 msgid "The requested page was not found in the document %s."
 msgstr "Żądana strona nie została odnaleziona w dokumencie %s."
 
-#: ../src/yelp-db-print.c:392
-#: ../src/yelp-docbook.c:410
-#: ../src/yelp-info.c:380
+#: ../src/yelp-db-print.c:392 ../src/yelp-docbook.c:410 ../src/yelp-info.c:380
 #: ../src/yelp-man.c:429
 msgid "File not found"
 msgstr "Plik nie został odnaleziony"
 
-#: ../src/yelp-db-print.c:393
-#: ../src/yelp-docbook.c:411
-#: ../src/yelp-info.c:381
+#: ../src/yelp-db-print.c:393 ../src/yelp-docbook.c:411 ../src/yelp-info.c:381
 #: ../src/yelp-man.c:430
 #, c-format
 msgid "The file ‘%s’ does not exist."
 msgstr "Plik \"%s\" nie istnieje."
 
-#: ../src/yelp-db-print.c:406
-#: ../src/yelp-db-print.c:418
-#: ../src/yelp-docbook.c:424
-#: ../src/yelp-docbook.c:436
-#: ../src/yelp-info.c:395
-#: ../src/yelp-man.c:458
-#: ../src/yelp-toc.c:437
+#: ../src/yelp-db-print.c:406 ../src/yelp-db-print.c:418
+#: ../src/yelp-docbook.c:424 ../src/yelp-docbook.c:436 ../src/yelp-info.c:395
+#: ../src/yelp-man.c:458 ../src/yelp-toc.c:437
 msgid "Could not parse file"
 msgstr "Nie można przetworzyć pliku"
 
-#: ../src/yelp-db-print.c:407
-#: ../src/yelp-docbook.c:425
+#: ../src/yelp-db-print.c:407 ../src/yelp-docbook.c:425
 #, c-format
-msgid "The file ‘%s’ could not be parsed because it is not a well-formed XML document."
-msgstr "Nie można przetworzyć pliku \"%s\", ponieważ nie jest to prawidłowo sformatowany dokument XML."
+msgid ""
+"The file ‘%s’ could not be parsed because it is not a well-formed XML "
+"document."
+msgstr ""
+"Nie można przetworzyć pliku \"%s\", ponieważ nie jest to prawidłowo "
+"sformatowany dokument XML."
 
-#: ../src/yelp-db-print.c:419
-#: ../src/yelp-docbook.c:437
+#: ../src/yelp-db-print.c:419 ../src/yelp-docbook.c:437
 #, c-format
-msgid "The file ‘%s’ could not be parsed because one or more of its included files is not a well-formed XML document."
-msgstr "Nie można przetworzyć pliku \"%s\", ponieważ jeden lub więcej zawartych w nim plików nie jest prawidłowo sformatowanym dokumentem XML."
+msgid ""
+"The file ‘%s’ could not be parsed because one or more of its included files "
+"is not a well-formed XML document."
+msgstr ""
+"Nie można przetworzyć pliku \"%s\", ponieważ jeden lub więcej zawartych w "
+"nim plików nie jest prawidłowo sformatowanym dokumentem XML."
 
-#: ../src/yelp-db-print.c:766
-#: ../src/yelp-docbook.c:787
+#: ../src/yelp-db-print.c:766 ../src/yelp-docbook.c:787
 msgid "Unknown"
 msgstr "Nieznany"
 
-#: ../src/yelp-error.c:132
-#: ../src/yelp-error.c:139
+#: ../src/yelp-error.c:132 ../src/yelp-error.c:139
 msgid "Unknown Error"
 msgstr "Nieznany błąd"
 
-#: ../src/yelp-error.c:136
-#: ../src/yelp-window.c:1710
+#: ../src/yelp-error.c:136 ../src/yelp-window.c:1723
 msgid "Could Not Read File"
 msgstr "Nie można odczytać pliku"
 
@@ -1133,13 +1122,20 @@ msgstr "Brak informacji na temat tego błędu."
 
 #: ../src/yelp-info.c:396
 #, c-format
-msgid "The file ‘%s’ could not be parsed because it is not a well-formed info page."
-msgstr "Nie można przetworzyć pliku \"%s\", ponieważ nie jest to prawidłowo sformatowana strona informacyjna."
+msgid ""
+"The file ‘%s’ could not be parsed because it is not a well-formed info page."
+msgstr ""
+"Nie można przetworzyć pliku \"%s\", ponieważ nie jest to prawidłowo "
+"sformatowana strona informacyjna."
 
 #: ../src/yelp-io-channel.c:132
 #, c-format
-msgid "The file ‘%s’ could not be read and decoded. The file may be compressed in an unsupported format."
-msgstr "Nie można odczytać i odkodować pliku \"%s\". Plik może być skompresowany w nieobsługiwanym formacie."
+msgid ""
+"The file ‘%s’ could not be read and decoded. The file may be compressed in "
+"an unsupported format."
+msgstr ""
+"Nie można odczytać i odkodować pliku \"%s\". Plik może być skompresowany w "
+"nieobsługiwanym formacie."
 
 #: ../src/yelp-main.c:88
 msgid "Use a private session"
@@ -1152,10 +1148,9 @@ msgstr "Określa katalog z tymczasowymi plikami"
 #. Commandline parsing is done here
 #: ../src/yelp-main.c:355
 msgid " GNOME Help Browser"
-msgstr " Przeglądarka pomocy GNOME"
+msgstr " Przeglądarka pomocy środowiska GNOME"
 
-#: ../src/yelp-main.c:384
-#: ../yelp.desktop.in.in.h:2
+#: ../src/yelp-main.c:384 ../yelp.desktop.in.in.h:2
 msgid "Help"
 msgstr "Pomoc"
 
@@ -1170,8 +1165,11 @@ msgstr "Katalog \"%s\" nie istnieje."
 
 #: ../src/yelp-man.c:459
 #, c-format
-msgid "The file ‘%s’ could not be parsed because it is not a well-formed man page."
-msgstr "Nie można przetworzyć pliku \"%s\", ponieważ nie jest to prawidłowo sformatowana strona instrukcji obsługi."
+msgid ""
+"The file ‘%s’ could not be parsed because it is not a well-formed man page."
+msgstr ""
+"Nie można przetworzyć pliku \"%s\", ponieważ nie jest to prawidłowo "
+"sformatowana strona instrukcji obsługi."
 
 #: ../src/yelp-print.c:97
 msgid "Print"
@@ -1213,8 +1211,12 @@ msgid "No results for \"%s\""
 msgstr "Brak wyników dla \"%s\""
 
 #: ../src/yelp-search-parser.c:286
-msgid "Try using different words to describe the problem you're having or the topic you want help with."
-msgstr "Proszę spróbować innych słów opisujących zaistniały problem lub żądany temat pomocy."
+msgid ""
+"Try using different words to describe the problem you're having or the topic "
+"you want help with."
+msgstr ""
+"Proszę spróbować innych słów opisujących zaistniały problem lub żądany temat "
+"pomocy."
 
 #: ../src/yelp-search-parser.c:289
 #, c-format
@@ -1240,8 +1242,14 @@ msgstr "Powtórz wyszukiwanie w Internecie w serwisie %s"
 #. * "work", and "broken".
 #.
 #: ../src/yelp-search-parser.c:874
-msgid "a:about:an:are:as:at:be:broke:broken:by:can:can't:dialog:dialogue:do:doesn't:doesnt:don't:dont:explain:for:from:get:gets:got:make:makes:not:when:has:have:help:how:i:in:is:it:item:me:my:of:on:or:tell:that:the:thing:this:to:what:where:who:will:with:won't:wont:why:work:working:works"
-msgstr "a:dla:dlaczego:dialog:do:działa:gdzie:i:kto:jak:jaki:jest:mój:moja:moje:nie:popsuty:popsuta:popsute:robić:o:są:skąd:sposób:to:w:z:za:zrobić"
+msgid ""
+"a:about:an:are:as:at:be:broke:broken:by:can:can't:dialog:dialogue:do:doesn't:"
+"doesnt:don't:dont:explain:for:from:get:gets:got:make:makes:not:when:has:have:"
+"help:how:i:in:is:it:item:me:my:of:on:or:tell:that:the:thing:this:to:what:"
+"where:who:will:with:won't:wont:why:work:working:works"
+msgstr ""
+"a:dla:dlaczego:dialog:do:działa:gdzie:i:kto:jak:jaki:jest:mój:moja:moje:nie:"
+"popsuty:popsuta:popsute:robić:o:są:skąd:sposób:to:w:z:za:zrobić"
 
 #. Translators: This is a list of common prefixes for words.
 #. * Do not translate this directly.  Instead, use a colon
@@ -1297,17 +1305,21 @@ msgid "The requested page was not found in the TOC."
 msgstr "Żądana strona nie została odnaleziona w spisie treści."
 
 #: ../src/yelp-toc.c:438
-msgid "The TOC file could not be parsed because it is not a well-formed XML document."
-msgstr "Plik spisu treści nie został przetworzony, ponieważ nie jest to prawidłowo sformatowany dokument XML."
+msgid ""
+"The TOC file could not be parsed because it is not a well-formed XML "
+"document."
+msgstr ""
+"Plik spisu treści nie został przetworzony, ponieważ nie jest to prawidłowo "
+"sformatowany dokument XML."
 
 #: ../src/yelp-transform.c:86
 msgid "Invalid Stylesheet"
-msgstr "Niepoprawny arkusz stylów"
+msgstr "Nieprawidłowy arkusz stylów"
 
 #: ../src/yelp-transform.c:87
 #, c-format
 msgid "The XSLT stylesheet ‘%s’ is either missing, or it is not valid."
-msgstr "Brak pliku \"%s\" lub nie jest on poprawnym arkuszem stylów XSLT."
+msgstr "Brak pliku \"%s\" lub nie jest on prawidłowym arkuszem stylów XSLT."
 
 #: ../src/yelp-transform.c:122
 msgid "Broken Transformation"
@@ -1315,7 +1327,7 @@ msgstr "Uszkodzona transformacja"
 
 #: ../src/yelp-transform.c:123
 msgid "An unknown error occurred while attempting to transform the document."
-msgstr "Podczas próby przetworzenia dokumentu wystąpił nieznany błąd."
+msgstr "Wystąpił nieznany błąd podczas próby przetworzenia dokumentu."
 
 #: ../src/yelp-transform.c:389
 msgid "No href attribute found on yelp:document\n"
@@ -1359,7 +1371,7 @@ msgstr "Wydrukuj tę stronę..."
 
 #: ../src/yelp-window.c:326
 msgid "About This Document"
-msgstr "Informacje o dokumencie"
+msgstr "Informacje o tym dokumencie"
 
 #: ../src/yelp-window.c:331
 msgid "Open _Location"
@@ -1437,10 +1449,9 @@ msgstr "_Poprzedni rozdział"
 msgid "_Next Section"
 msgstr "N_astępny rozdział"
 
-#: ../src/yelp-window.c:410
-#: ../src/yelp-window.c:442
+#: ../src/yelp-window.c:410 ../src/yelp-window.c:442
 msgid "_Contents"
-msgstr "_Zawartość"
+msgstr "_Spis treści"
 
 #: ../src/yelp-window.c:416
 msgid "_Add Bookmark"
@@ -1478,86 +1489,80 @@ msgstr "Skopiuj adres _e-mail"
 msgid "Help Browser"
 msgstr "Przeglądarka pomocy"
 
-#: ../src/yelp-window.c:619
-#: ../src/yelp-window.c:671
-#: ../src/yelp-window.c:1772
+#: ../src/yelp-window.c:619 ../src/yelp-window.c:671 ../src/yelp-window.c:1785
 msgid "Loading..."
 msgstr "Wczytywanie..."
 
-#: ../src/yelp-window.c:620
-#: ../src/yelp-window.c:672
+#: ../src/yelp-window.c:620 ../src/yelp-window.c:672
 msgid "Unknown Page"
 msgstr "Nieznana strona"
 
-#: ../src/yelp-window.c:1042
-#: ../src/yelp-window.c:1104
+#: ../src/yelp-window.c:1042 ../src/yelp-window.c:1104
 #: ../src/yelp-window.c:1113
 #, c-format
 msgid "The requested URI \"%s\" is invalid"
-msgstr "Żądany adres URI \"%s\" jest niepoprawny"
+msgstr "Żądany adres URI \"%s\" jest nieprawidłowy"
 
-#: ../src/yelp-window.c:1043
-#: ../src/yelp-window.c:1106
+#: ../src/yelp-window.c:1043 ../src/yelp-window.c:1106
 #: ../src/yelp-window.c:1114
 msgid "Unable to load page"
 msgstr "Nie można wczytać strony"
 
-#: ../src/yelp-window.c:1330
+#: ../src/yelp-window.c:1343
 msgid "_Search:"
 msgstr "Wy_szukaj:"
 
-#: ../src/yelp-window.c:1331
+#: ../src/yelp-window.c:1344
 msgid "Search for other documentation"
 msgstr "Wyszukiwanie innej dokumentacji"
 
-#: ../src/yelp-window.c:1351
+#: ../src/yelp-window.c:1364
 msgid "Cannot create window"
 msgstr "Nie można utworzyć okna"
 
-#: ../src/yelp-window.c:1357
+#: ../src/yelp-window.c:1370
 msgid "Cannot create search component"
 msgstr "Nie można utworzyć modułu wyszukiwania"
 
-#: ../src/yelp-window.c:1529
+#: ../src/yelp-window.c:1542
 msgid "Fin_d:"
 msgstr "Z_najdź:"
 
-#: ../src/yelp-window.c:1551
+#: ../src/yelp-window.c:1564
 msgid "Find _Previous"
 msgstr "Znajdź _poprzednie"
 
-#: ../src/yelp-window.c:1563
+#: ../src/yelp-window.c:1576
 msgid "Find _Next"
 msgstr "Znajdź _następne"
 
-#: ../src/yelp-window.c:1576
+#: ../src/yelp-window.c:1589
 msgid "Phrase not found"
 msgstr "Fraza nie została odnaleziona"
 
-#: ../src/yelp-window.c:1707
+#: ../src/yelp-window.c:1720
 #, c-format
-msgid "The file ‘%s’ could not be read.  This file might be missing, or you might not have permissions to read it."
-msgstr "Nie można odczytać pliku \"%s\". Prawdopodobnie plik nie istnieje, lub brak uprawnień do jego odczytu."
+msgid ""
+"The file ‘%s’ could not be read.  This file might be missing, or you might "
+"not have permissions to read it."
+msgstr ""
+"Nie można odczytać pliku \"%s\". Prawdopodobnie plik nie istnieje, lub brak "
+"uprawnień do jego odczytu."
 
 #. Note to translators: put here your name (and address) so it
 #. * will show up in the "about" box
-#: ../src/yelp-window.c:2577
+#: ../src/yelp-window.c:2602
 msgid "translator-credits"
-msgstr ""
-"Bartosz Kosiorek <gang65@poczta.onet.pl>, 2005\n"
-"Aviary.pl <gnomepl@aviary.pl>, 2007, 2008, 2009\n"
-"Marek Stępień <mstepien@aviary.pl>, 2007\n"
-"Piotr Zaryk <pzaryk@aviary.pl>, 2008"
+msgstr "Aviary.pl <gnomepl@aviary.pl>, 2007, 2008, 2009, 2010"
 
-#: ../src/yelp-window.c:2580
+#: ../src/yelp-window.c:2605
 msgid "Yelp"
 msgstr "Yelp"
 
-#: ../src/yelp-window.c:2582
+#: ../src/yelp-window.c:2607
 msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr "Przeglądarka dokumentacji środowiska GNOME."
+msgstr "Przeglądarka dokumentacji dla środowiska GNOME."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Pomoc GNOME"
-
