--- a/po/eu.po
+++ b/po/eu.po
@@ -1,14 +1,14 @@
 # translation of eu.po to Basque
 #
 # Hizkuntza Politikarako Sailburuordetza <hizkpol@ej-gv.es>, 2005.
-# Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2006, 2007, 2008, 2009.
+# Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2006, 2007, 2008, 2009, 2010.
 # Iñaki Larrañaga Murgoitio <dooteo@zundan.com>, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-08-27 18:21+0200\n"
-"PO-Revision-Date: 2009-08-27 18:31+0200\n"
+"PO-Revision-Date: 2010-03-24 17:05+0100\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>\n"
 "Language-Team: Basque <itzulpena@euskalgnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -1176,7 +1176,7 @@ msgstr "%s inprimagailuak ez du PostScript moduan inprimatzea onartzen."
 
 #: ../src/yelp-print.c:366
 msgid "Waiting to print"
-msgstr "Inprimatzeko zai"
+msgstr "Inprimatzeko zain"
 
 #: ../src/yelp-print.c:578
 msgid "An error occurred while printing"
@@ -1428,7 +1428,7 @@ msgstr "_Laguntzako gaiak"
 
 #: ../src/yelp-window.c:397
 msgid "Go to the listing of help topics"
-msgstr "Joan lagunako gaien zerrendara"
+msgstr "Joan laguntzako gaien zerrendara"
 
 #: ../src/yelp-window.c:400
 msgid "_Previous Section"
