--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Changes in 2.30.0:
+------------------
+* Updated translations:
+  bn      (Jamil Ahmed)
+  eu      (Inaki Larranaga Murgoitio)
+  lt      (Gintautas Miliauskas)
+  pl      (Piotr Drąg)
+  ru      (Leonid Kanter)
+  sv      (Daniel Nylander)
+  vi      (Clytie)
+
 Changes in 2.29.5:
 ------------------
 * Clean up GLib and GTK+ includes (Javier Jardón)
