Setting maintainers and credits and such

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
+Shaun McCance <shaunm@gnome.org>
 Mikael Hallendal <micke@imendio.com>
 Alexander Larsson <alexl@redhat.com>
-Shaun McCance <shaunm@gnome.org>
+Brent Smith <gnome@nextreality.net>
+Don Scorgie <Don@Scorgie.org>
